--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
+rand = { version = "0.8.5", features = [] }
+rayon = "1.8.0"
+strum_macros = "0.25.3"
+thiserror = "1.0.49"
+rust_decimal = "1.32"
